# skinning_renderer

./: .gitattributes  .gitignore  README.md
shaders/: shader_lighting.fs  shader_lighting.vs  shader_skybox.fs  shadow.fs  shadow.vs
src/: CMakeLists.txt  animation.h  bone_colors_generator.ipynb  camera.h  geometry_primitives.h  light.h  main.cpp  math_utils.h  mesh.h  model.h  opengl_utils.h  scene.h  shader.h  stb.h  texture.h  texture_cube.h
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
